Created basic round loop and firing mechanic
Made it so AI goes right after player and for it to continue shooting
if it hits a spot that isn't valid. Added update board to changes
grid to match Gameboard

--- a/src/style.css
+++ b/src/style.css
@@ -21,8 +21,6 @@
     grid-auto-flow: column;
 }
 
-
-
 .x-cord div, .y-cord div, .grid div{
     box-sizing: border-box;
     width: 50px;
@@ -37,4 +35,16 @@
 
 .grid div {
     border: solid black 3px;
+}
+
+.miss {
+    background-color: gray;
+}
+
+.sunk-part {
+    background-color: red;
+}
+
+.sunk { 
+    background-color: black;
 }
