Created function for sinking of ships
When a ship is fully sunk all blank cells are changed to gray
and all parts of the ship and changed to sunk.

--- a/src/style.css
+++ b/src/style.css
@@ -42,9 +42,9 @@
 }
 
 .sunk-part {
-    background-color: red;
+    background-color: yellow;
 }
 
 .sunk { 
-    background-color: black;
+    background-color: red;
 }
