--- a/src/style.css
+++ b/src/style.css
@@ -133,3 +133,10 @@
     height: 50px;
     font-size: 30px;
 }
+
+.start {
+    width: 100px;
+    height: 50px;
+    font-size: 30px;
+    background-color: rgb(0, 255, 0);
+}
