--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,9 @@
+body {
+    padding: 0;
+    margin: 0;
+    background: 0;
+}
+
 .side {
     display: flex;
     gap: 50px;
@@ -139,4 +145,44 @@
     height: 50px;
     font-size: 30px;
     background-color: rgb(0, 255, 0);
+}
+
+.winnerDisplay.hide {
+    display: none;
+}
+
+.background.hide { 
+    display: none;
+}
+
+.background {
+    position: absolute;
+    width: 100vw;
+    height: 145vh;
+    background-color: rgba(0, 0, 0, 0.600);
+}
+
+.winnerDisplay {
+    position: fixed;
+    top: 30vh;
+    left: 40vw;
+    width: 400px;
+    height: 400px;
+    display: flex;
+    background-color: white;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.winner {
+    text-align: center;
+    font-size: 64px;
+}
+
+.newGameBtn {
+    text-align: center;
+    font-size: 54px;
+    background-color: black;
+    color: white;
 }
